--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <% include head.ejs %>
 
-  <h2>Welcome to Markslist! </h2>
+  <h2>Welcome to ayoshitake.com! </h2>
   <h4>Please log in.</h4>
   <% if (message) { %>
   <p><%= message %></p>
@@ -8,7 +8,7 @@
   <form action="/login" method="post">
     <div>
       <label>Username:</label>
-      <input type="text" name="username" placeholder="username"/><br/>
+      <input type="text" name="username" placeholder="username" autofocus/><br/>
     </div>
     <div>
       <label>Password:</label>
