Added sitee-wide login functionality (mostly copied from existing markslist login) Made top-level views: login, head, and foot

--- a/apps/ayoshitake.com/views/index.ejs
+++ b/apps/ayoshitake.com/views/index.ejs
@@ -1,53 +1,37 @@
-<% include head.ejs %>
-
-<% include header.ejs %>
+<% include ../../../views/head %>
 
 <div role="main" class="main">
 
-<span class="portal">
-  <a href="http://wishingwell.ayoshitake.com">
+<a class="portal" href="http://wishingwell.ayoshitake.com">
     <img src="/img/well_275.jpg" title="Wishing Well" />
-  </a>
-</span>
+</a>
 
-<span class="portal">
-  <a href="http://markslist.ayoshitake.com">
+<a class="portal" href="http://markslist.ayoshitake.com">
     <img src="/img/mark3_275.jpg" title="Mark's List" />
-  </a>
-</span>
+</a>
+
+<a class="portal" href="http://corridor.ayoshitake.com">
+    <img src="/img/corridor_275.jpg" title="Corridor" />
+</a>
+
+<a class="portal" href="http://minesweeper.ayoshitake.com">
+    <img src="/img/minesweeper_275.jpg" title="Minesweeper" />
+</a>
+
+<a class="portal" href="http://fortunecookie.ayoshitake.com">
+    <img src="/img/fortunecookie_275.jpg" title="Fortune Cookie" />
+</a>
 
 <br />
 
-<span class="portal">
-  <a href="http://corridor.ayoshitake.com">
-    <img src="/img/corridor_275.jpg" title="Corridor" />
-  </a>
-</span>
-
-<span class="portal">
-  <a href="http://minesweeper.ayoshitake.com">
-    <img src="/img/minesweeper_275.jpg" title="Minesweeper" />
-  </a>
-</span>
-
-<span class="portal">
-  <a href="http://fortunecookie.ayoshitake.com">
-    <img src="/img/fortunecookie_275.jpg" title="Fortune Cookie" />
-  </a>
-</span>
-
-<span class="portal">
-  <a href="http://etstutoring.org">
+<a class="portal" href="http://etstutoring.org">
     <img src="/img/chart_small_275.jpg" title="ETS Educational and Tutorial Services" />
-  </a>
-</span>
+</a>
 
-<span class="portal">
-  <a href="http://magi-cal.me">
+<a class="portal" href="http://magi-cal.me">
     <img src="/img/magi_cal_wizard2_275.jpg" title="Magi-Cal" />
-  </a>
-</span>
+</a>
 
 </div>
 
-<% include foot.ejs %>
+<% include ../../../views/foot %>
