--- a/apps/ayoshitake.com/views/login.ejs
+++ b/apps/ayoshitake.com/views/login.ejs
@@ -1,4 +1,4 @@
-<% include head.ejs %>
+<% include ../../../views/head %>
 
 <% include header.ejs %>
   <div role="main" class="main">
@@ -13,4 +13,4 @@
     No pigeons were harmed in the making of this website.
   </footer>
 
-<% include foot.ejs %>
+<% include ../../../views/foot %>
