--- a/apps/fortune_cookie/views/fortune_teller.ejs
+++ b/apps/fortune_cookie/views/fortune_teller.ejs
@@ -1,13 +1,4 @@
-<% include head.ejs %>
-
-  <header>
-    <a href="http://ayoshitake.com"> 
-      <img src="/img/aybanner3.png" title="ayoshitake.com" />
-    </a>
-    <br />
-    <br />
-    <br />
-  </header>
+<% include ../../../views/head %>
 
   <div role="main">
     <img src="img/crystalball.jpg" height = 300em />
@@ -20,4 +11,4 @@
   <footer>
   </footer>
   
-<% include foot.ejs %>
+<% include ../../../views/foot %>
