--- a/apps/wishing_well/views/index.ejs
+++ b/apps/wishing_well/views/index.ejs
@@ -1,4 +1,4 @@
-<% include head.ejs %>
+<% include ../../../views/head %>
 
   <header>
     <a href= "/" id="logo" alt="The Wishing Well" class="ir"></a>
@@ -13,4 +13,4 @@
   <footer>
   </footer>
 
-<% include foot.ejs %>
+<% include ../../../views/foot %>
