--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,5 @@
-<% include head.ejs %>
+<% include head %>
 
-  <h2>Welcome to ayoshitake.com! </h2>
   <h4>Please log in.</h4>
   <% if (message) { %>
   <p><%= message %></p>
@@ -22,4 +21,4 @@
     <% } %>
   </form>
 
-<% include foot.ejs %>
+<% include foot %>
