--- a/apps/ayoshitake.com/public/css/style.css
+++ b/apps/ayoshitake.com/public/css/style.css
@@ -4,29 +4,9 @@ opacity: 0.5;
 filter:alpha(opacity=5);
 }
 
-@font-face {
-    /*font found at http://www.fontsquirrel.com/fonts/Destroy*/
-    font-family: "DESTROY";
-    src: url(/DESTROY.ttf) format("truetype");
-}
-
 body{
     margin: 0px;
     padding: 0px;
-    font-family: DESTROY, sans-serif;
-}
-
-.banner {
-    padding-top: 3em;
-    display: block;
-}
-
-h3 {
-	font-size: 1em;
-	color: #efefff;
-	text-align: center;
-	margin: 0px auto 0 auto;
-	margin-bottom: 20px;
 }
     
 html {
@@ -43,57 +23,13 @@ html {
 	min-height: 100%;
 }
 
-div.portal{
-	font-family: Castellar, "Trebuchet MS", sans-serif;
-	text-align: center;
-	margin: 8em 8em 8em 8em;
-	height: 100px;
-	width: 100px;
-}
-
-.navbar {
-    background: black;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    font-size: 2em;
-    padding: 0px;
-    margin: 0px;
-}
-
-
-.navbar ul {
-	margin: 0;
-	padding: 3px;
-}
-
-.navbar li {
-    display: inline;
-    float: left;
-    background: black;
-    padding-right: 1em;
-    vertical-align: center;
-}
-
-.navbar a {
-    display: block;
+a.portal {
+    margin: 10px;
     text-decoration: none;
 }
 
-.navbar a:link    { color: #CCCCCC; }
-.navbar a:visited { color: white; }
-.navbar a:hover   { color: red; }
-.navbar a.current_page  { color: chartreuse; }
-
-table {
-	border: 1;
-	text-align: center;
-}
-
-td {
-	border: 1em;
-	width: 15em;
-	text-align: center;
+a.portal img {
+    height: 275px;
 }
 
 #about_content {
@@ -136,8 +72,4 @@ td {
 	background-image: url('/img/space_768.jpeg');
 	width:100%;
 	height:100%;
-}
-
-.portal a img {
-    height: 275px;
 }
