--- a/apps/fortune_cookie/views/index.ejs
+++ b/apps/fortune_cookie/views/index.ejs
@@ -1,13 +1,4 @@
-<% include head.ejs %>
-
-  <header>
-    <a href="http://ayoshitake.com"> 
-      <img src="/img/aybanner3.png" title="ayoshitake.com" />
-    </a>
-    <br />
-    <br />
-    <br />
-  </header>
+<% include ../../../views/head %>
 
   <div role="main">
     <table align="center">
@@ -28,4 +19,4 @@
   <footer>
   </footer>
   
-<% include foot.ejs %>
+<% include ../../../views/foot %>
