--- a/apps/fortune_cookie/views/manage_fortunes.ejs
+++ b/apps/fortune_cookie/views/manage_fortunes.ejs
@@ -1,13 +1,4 @@
-<% include head.ejs %>
-
-  <header>
-    <a href="http://ayoshitake.com"> 
-      <img src="/img/aybanner3.png" title="ayoshitake.com" />
-    </a>
-    <br />
-    <br />
-    <br />
-  </header>
+<% include ../../../views/head %>
 
   <div role="main">
     <img src="img/opencookie.jpg" height = 300em />
@@ -30,4 +21,4 @@
     } %>
   </div>
   
-<% include foot.ejs %>
+<% include ../../../views/foot %>
