--- a/apps/wishing_well/views/view_wishes.ejs
+++ b/apps/wishing_well/views/view_wishes.ejs
@@ -1,4 +1,4 @@
-<% include head.ejs %>
+<% include ../../../views/head %>
 
   <div role="main">
     <h2><%= title %></h2>
@@ -12,4 +12,4 @@
     <% } %>
   </div>
 
-<% include foot.ejs %>
+<% include ../../../views/foot %>
