--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -1,13 +1,18 @@
-<!-- JavaScript at the bottom for fast page loading -->
+  <!-- JavaScript at the bottom for fast page loading -->
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"><\/script>')</script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
-  
+
+  <!-- fade in the "under construction" message -->  
+  <script>$('#under_construction').hide().fadeIn(2000);</script>
+
   <!-- scripts concatenated and minified via build script -->
+  
+  <script src="js/plugins.js"></script>
+  <script src="js/script.js"></script>
   <!-- end scripts -->
 
-  <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
-       mathiasbynens.be/notes/async-analytics-snippet -->
+  <!-- Asynchronous Google Analytics snippet. mathiasbynens.be/notes/async-analytics-snippet -->
   <script>
     var _gaq=[['_setAccount','UA-29868593-1'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
