--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,4 +1,4 @@
-<!doctype html >
+<!doctype html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
@@ -20,7 +20,8 @@
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="<%= settings.base_url %>/css/header.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
@@ -30,7 +31,58 @@
   <script src="js/libs/modernizr-2.5.3.min.js"></script>
 </head>
 <body>
-
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+    <header>
+        <% if (! settings.hide_navbar) { %>
+            <div class="navbar">
+                <ul>
+                    <%
+                    var sites = [
+                            ['home', 'ayoshitake.com'],
+                            ['corridor', 'corridor.ayoshitake.com'],
+                            ['fortune cookie', 'fortunecookie.ayoshitake.com'],
+                            ['markslist', 'markslist.ayoshitake.com'],
+                            ['minesweeper', 'minesweeper.ayoshitake.com'],
+                            ['wishing well', 'wishingwell.ayoshitake.com'],
+                            ['magi-cal', 'magi-cal.me'],
+                            ['ETS', 'etstutoring.org'],
+                        ],
+                        i,
+                        site_name,
+                        site_href;
+                    for (i = 0, len = sites.length; i < len; i++) {
+                        site_name = sites[i][0],
+                        site_href = sites[i][1];
+                    %>
+                        <li>
+                            <a
+                                <%
+                                if (settings.site_name === site_name) { %>
+                                    class="current_site"
+                                <% }
+                                else { %>
+                                    href="http://<%= site_href %>"
+                                <% } %>
+                            ><%= site_name.toUpperCase() %></a>
+                        </li>
+                    <% } %>
+                    <li class="right">
+                        <a href="/login">LOGIN</a>
+                    </li>
+                    <li class="right">
+                        <a href="/logout">LOGOUT</a>
+                    </li>
+                </ul>
+            </div>
+        <% } %>
+        <% if (settings.show_banner) { %>
+            <div class="banner">
+                <a href="http://ayoshitake.com">
+                    <img src="http://ayoshitake.com/img/aybanner3.png" title="ayoshitake.com" />
+                </a>
+                <h3 id="under_construction">PERMANENTLY UNDER CONSTRUCTION</h3>
+            </div>
+        <% } %>
+    </header>
