converted all MongoDB-using apps to use mongoose instead of mongodb-native combined all databases into one; only one db.config file is now required (no more .connection files) minor feature additions/bug fixes: 1. view_wishes page now shows the user who made a wish, if available 2. fixed a bug in Minesweeper that caused a loaded board to display incorrectly

--- a/apps/minesweeper/views/index.ejs
+++ b/apps/minesweeper/views/index.ejs
@@ -13,7 +13,12 @@
       <% for (var i = 0, cell_contents; i < numRows; i++) { %>
         <tr id="board-row-<%= i %>">
           <% for (var j = 0; j < numCols; j++) { 
-            if (visited !== undefined && visited[i] !== undefined) cell_contents = visited[i][j]; %>
+            if (visited !== undefined && visited[i] !== undefined) {
+              cell_contents = visited[i][j];
+            } else {
+              cell_contents = undefined;
+            }
+            %>
             <% if (cell_contents === undefined) { %>
               <td class="boardCell">
                 <button class = "boardTile" id="board-tile-<%= i %>-<%= j %>">
