--- a/apps/ayoshitake.com/views/blah.ejs
+++ b/apps/ayoshitake.com/views/blah.ejs
@@ -1,6 +1,5 @@
-<% include head.ejs %>
+<% include ../../../views/head %>
 
-<% include header.ejs %>
   <div role="main" class="main">
       Click on Wilfred the messenger pigeon to send us an e-mail.
       <br />
@@ -13,4 +12,4 @@
     No pigeons were harmed in the making of this website.
   </footer>
 
-<% include foot.ejs %>
+<% include ../../../views/foot %>
