--- a/apps/ayoshitake.com/views/contact.ejs
+++ b/apps/ayoshitake.com/views/contact.ejs
@@ -1,6 +1,5 @@
-<% include head.ejs %>
+<% include ../../../views/head %>
 
-<% include header.ejs %>
   <div role="main" class="main" id="contact-main">
       <h4>Click on Wilfred the messenger pigeon to send us an e-mail.</h4>
       <br />
@@ -15,4 +14,4 @@
     No pigeons were harmed in the making of this website.
   </footer>
 
-<% include foot.ejs %>
+<% include ../../../views/foot %>
