Made changes necessary to access all sites in a development environment, at .dev domains. settings.base_url is now used everywhere it should be used, including images on portal site.

--- a/apps/ayoshitake.com/views/index.ejs
+++ b/apps/ayoshitake.com/views/index.ejs
@@ -2,23 +2,23 @@
 
 <div role="main" class="main">
 
-<a class="portal" href="http://wishingwell.ayoshitake.com">
+<a class="portal" href="http://wishingwell.<%= settings.base_url %>">
     <img src="/img/well_275.jpg" title="Wishing Well" />
 </a>
 
-<a class="portal" href="http://markslist.ayoshitake.com">
+<a class="portal" href="http://markslist.<%= settings.base_url %>">
     <img src="/img/mark3_275.jpg" title="Mark's List" />
 </a>
 
-<a class="portal" href="http://corridor.ayoshitake.com">
+<a class="portal" href="http://corridor.<%= settings.base_url %>">
     <img src="/img/corridor_275.jpg" title="Corridor" />
 </a>
 
-<a class="portal" href="http://minesweeper.ayoshitake.com">
+<a class="portal" href="http://minesweeper.<%= settings.base_url %>">
     <img src="/img/minesweeper_275.jpg" title="Minesweeper" />
 </a>
 
-<a class="portal" href="http://fortunecookie.ayoshitake.com">
+<a class="portal" href="http://fortunecookie.<%= settings.base_url %>">
     <img src="/img/fortunecookie_275.jpg" title="Fortune Cookie" />
 </a>
 
