Moved header.css to top-level public folder Changed header to show Register/Login for un-logged-in users and [Username]/Logout for logged-in users Added a .foreverignore file

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -33,6 +33,7 @@ header {
     padding-left: 10px;
     padding-right: 10px;
     vertical-align: center;
+    color: #FFFFCC;
 }
 
 .navbar li.right {
@@ -44,8 +45,8 @@ header {
     text-decoration: none;
 }
 
-.navbar a:link    { color: #CCCCCC; }
-.navbar a:visited { color: white; }
+.navbar a:link    { color: white; }
+.navbar a:visited { color: #CCCCCC; }
 .navbar a:hover   { color: red; }
 .navbar a.current_site  { color: chartreuse; }
 
