--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -8,8 +8,7 @@
     $(document).ready(function() {
         $('.slideshow').cycle({
         fx: 'fade', // choose your transition type, ex: fade, scrollUp, shuffle, etc...
-        delay: 2700,
-        pause: 1
+        delay: 2700
       });
     });
   </script>
