Completed generalization of models testing into test_utils library; created model test files for each model (some errors due to overgeneralization in test_utils) Moved db connection code from user module to dedicated db module Fixed portal page to not have 100%-width links (also gets rid of scrollbar)

--- a/apps/ayoshitake.com/views/index.ejs
+++ b/apps/ayoshitake.com/views/index.ejs
@@ -32,4 +32,21 @@
     </div>
 </div>
 
+<script>window.jQuery || document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
+<!-- fade in the "under construction" message -->  
+<script>$('#under_construction').hide().fadeIn(2000);</script>
+
+<!-- include Cycle plugin -->
+<script type="text/javascript" src="http://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+  $('.slideshow').cycle({
+    fx: 'fade', // transition type
+    delay: 2700,
+    pause: 1
+  });
+});
+</script>
+
 <% include ../../../views/foot %>
