--- a/public/css/header.css
+++ b/public/css/header.css
@@ -18,7 +18,6 @@ header {
     padding: 0;
     margin: 0;
     height: 26px;
-    overflow: auto;
 }
 
 .navbar ul {
@@ -45,13 +44,26 @@ header {
     text-decoration: none;
 }
 
+
+.navbar > ul > li > ul {
+    background-color: black;
+    position: absolute;
+    width: 7em;
+    font-size: .9em;
+    left: -999em;
+}
+
 .navbar a:link    { color: white; }
 .navbar a:visited { color: #CCCCCC; }
 .navbar a:hover   { color: red; }
 .navbar a.current_site  { color: chartreuse; }
 
+.navbar li:hover ul, .navbar li ul:hover {
+    overflow: visible;
+    left:auto;
+}
 .banner {
-    padding-top: 1.5em;
+    padding-top: 2em;
     display: block;
 }
 
