Fixed Corridor dialog (replaced with prompt) Added New Game form to Corridor

--- a/apps/corridor/public/css/style.css
+++ b/apps/corridor/public/css/style.css
@@ -378,6 +378,15 @@ img.possibleMove:hover {
     float: left
 }
 
+#new_game_form {
+    display: inline;
+    float: left
+}
+
+#new_game_form input[type="text"] {
+    width: 1em;
+}
+
 #fence_counters {
     display: inline;
     float: left;
