--- a/apps/ayoshitake.com/public/css/style.css
+++ b/apps/ayoshitake.com/public/css/style.css
@@ -54,7 +54,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5f66', end
    background: -moz-linear-gradient(top, #888c8b, #586975);
    background: -ms-linear-gradient(top, #888c8b, #586975);
    background: -o-linear-gradient(top, #888c8b, #586975);
-   padding: 9px 18px;
+   padding: 6px 12px;
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    border-radius: 8px;
@@ -63,8 +63,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5f66', end
    box-shadow: rgba(0,0,0,1) 0 1px 0;
    text-shadow: rgba(0,0,0,.4) 0 1px 0;
    color: #ffffff;
-   font-size: 17px;
-   font-family: Georgia, Serif;
+   font-size: 14px;
    text-decoration: none;
    vertical-align: middle;
    }
@@ -147,10 +146,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5f66', end
     
 }    
 
-#login {
-	float: right;
-}
-
 #login_main {
     font-family: DESTROY, Paprika, sans-serif;
     margin: 100px 20px 20px 20px;
@@ -171,4 +166,4 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5f66', end
 	font-family: DESTROY, Paprika, sans-serif;
 	margin: 100px 20px 20px 20px;
 
-}
+}o
