Fixed banner on non-portal sites

--- a/views/head.ejs
+++ b/views/head.ejs
@@ -152,8 +152,8 @@
         <% } %>
         <% if (settings.show_banner) { %>
             <div class="banner">
-                <a href="<% settings.base_url %>">
-                    <img src="<% settings.base_url %>/img/aybanner3.png" title="ayoshitake.com" />
+                <a href="http://<%= settings.base_url %>">
+                    <img src="http://<%= settings.base_url %>/img/aybanner3.png" title="ayoshitake.com" />
                 </a>
                 <h3 id="under_construction">PERMANENTLY UNDER CONSTRUCTION</h3>
             </div>
