--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -28,7 +28,7 @@
     </script>
   <% } %>
 
-  <!-- Hide/Show Login functionality -->
+  <!-- Hide/Show Register/Login functionality -->
   <script>
     $(document).ready(function() {
       $('#login').hide();
@@ -48,34 +48,6 @@
           .slideUp();
       });
       $('#login form :submit').click(function() {
-        $(this)
-          .parent()
-          .prev('a')
-          .click();
-        });
-    });
-  </script>
-
-  <!-- Hide/Show Register functionality -->
-  <script>
-    $(document).ready(function() {
-      $('#register').hide();
-      $('#register_trigger').toggle(function() {
-        $(this)
-          .addClass('active');
-        $('#register')
-          .css({
-          left: $(this).position().left - $(this).width(), 
-          top: $(this).position().top + $(this).height()
-          })
-          .slideDown();
-      }, function () {
-        $(this)
-          .removeClass('active');
-        $('#register')
-          .slideUp();
-      });
-      $('#register form :submit').click(function() {
         $(this)
           .parent()
           .prev('a')
