--- a/apps/ayoshitake.com/views/index.ejs
+++ b/apps/ayoshitake.com/views/index.ejs
@@ -2,31 +2,31 @@
 
 <div role="main" class="main">
     <div class="slideshow">
-    <a class="portal" href="http://wishingwell.<%= settings.base_url %>">
+    <a class="portal" href="<%= settings.protocol %>://wishingwell.<%= settings.base_url %>">
         <img src="/img/well_275.jpg" title="Wishing Well" />
     </a>
 
-    <a class="portal" href="http://markslist.<%= settings.base_url %>">
+    <a class="portal" href="<%= settings.protocol %>://markslist.<%= settings.base_url %>">
         <img src="/img/mark3_275.jpg" title="Mark's List" />
     </a>
 
-    <a class="portal" href="http://corridor.<%= settings.base_url %>">
+    <a class="portal" href="<%= settings.protocol %>://corridor.<%= settings.base_url %>">
         <img src="/img/corridor_275.jpg" title="Corridor" />
     </a>
 
-    <a class="portal" href="http://minesweeper.<%= settings.base_url %>">
+    <a class="portal" href="<%= settings.protocol %>://minesweeper.<%= settings.base_url %>">
         <img src="/img/minesweeper_275.jpg" title="Minesweeper" />
     </a>
 
-    <a class="portal" href="http://fortunecookie.<%= settings.base_url %>">
+    <a class="portal" href="<%= settings.protocol %>://fortunecookie.<%= settings.base_url %>">
         <img src="/img/fortunecookie_275.jpg" title="Fortune Cookie" />
     </a>
 
-    <a class="portal" href="http://etstutoring.org">
+    <a class="portal" href="<%= settings.protocol %>://etstutoring.org">
         <img src="/img/chart_small_275.jpg" title="ETS Educational and Tutorial Services" />
     </a>
 
-    <a class="portal" href="http://magi-cal.me">
+    <a class="portal" href="<%= settings.protocol %>://magi-cal.me">
         <img src="/img/magi_cal_wizard2_275.jpg" title="Magi-Cal" />
     </a>
     </div>
@@ -38,7 +38,7 @@
 <script>$('#under_construction').hide().fadeIn(2000);</script>
 
 <!-- include Cycle plugin -->
-<script type="text/javascript" src="http://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script>
+<script type="text/javascript" src="js/jquery.cycle.all.latest.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
   $('.slideshow').cycle({
