--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -1,11 +1,11 @@
   <!-- JavaScript at the bottom for fast page loading -->
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script>window.jQuery || document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"><\/script>')</script>
-  <script>window.jQuery || document.write('<script src="http://<%= settings.base_url %>/js/lib/jquery-1.7.1.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="<%= settings.protocol %>://<%= settings.base_url %>/js/lib/jquery-1.7.1.min.js"><\/script>')</script>
 
   <!-- Navbar script (for dropdown animation) -->
   <% if (! settings.hide_navbar) { %>
-    <script src="http://<%= settings.base_url %>/js/lib/jquery.hoverIntent.min.js"></script>
+    <script src="<%= settings.protocol %>://<%= settings.base_url %>/js/lib/jquery.hoverIntent.min.js"></script>
 
     <script>
       $('.navbar li ul').css({
